vacation/vacation-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vacation
  namespace: vacation
spec:
  selector:
    app: vacation
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
